--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:maxLength="250"
+            android:maxLength="8"
             android:textSize="16sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -48,7 +48,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:lines="1"
-            android:maxLength="50"
+            android:inputType="phone"
+            android:maxLength="10"
             android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,7 +81,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="32dp"
         android:gravity="center"
-        android:text="REGISTER"
+        android:text="SEARCH"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layout_address" />
