resident parcelable implementation

--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:text="SEARCH RESULT :"
+        android:textColor="@color/colorAccent"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,6 +82,7 @@
         android:layout_marginTop="16dp"
         android:textSize="20sp"
         android:textColor="#FF0000"
+        android:textStyle="bold"
         android:text="USER NOT FOUND !!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
