--- a/app/src/main/res/layout/fragment_register_resident.xml
+++ b/app/src/main/res/layout/fragment_register_resident.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     android:padding="8dp">
 
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="28dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
