--- a/app/src/main/res/layout/fragment_resident_list.xml
+++ b/app/src/main/res/layout/fragment_resident_list.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="28dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+
 
     <TextView
         android:id="@+id/textView"
