allow multiple car images for resident

--- a/app/src/main/res/layout/fragment_register_resident_two.xml
+++ b/app/src/main/res/layout/fragment_register_resident_two.xml
@@ -253,6 +253,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Additional Cars"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.502"
                 app:layout_constraintStart_toStartOf="parent"
@@ -273,8 +274,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:text="Secondary Drivers"
+                android:layout_marginTop="16dp"
+                android:text="Secondary Drivers Linked to this profile"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_profile" />
