--- a/app/src/main/res/layout/fragment_secondary_drivers.xml
+++ b/app/src/main/res/layout/fragment_secondary_drivers.xml
@@ -152,10 +152,10 @@
                 android:textColor="@color/colorAccent"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_profile" />
+                app:layout_constraintTop_toBottomOf="@+id/button4" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_drivers"
@@ -167,7 +167,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button4" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewadd" />
 
             <TextView
                 android:id="@+id/textView30"
